<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatInnerFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatInnerFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/chatInnerAddChatMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="69dp"
        android:text="@string/chat_inner_fragment_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatInnerAddToChatInputEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chatInnerAddConnectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/chat_inner_fragment_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/chatInnerAddConectionInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatInnerAddConectionInputEditText" />

    <Button
        android:id="@+id/chatInnerLeaveChatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="33dp"
        android:text="@string/chat_inner_fragment_leave_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatInnerAddConnectionButton" />

    <EditText
        android:id="@+id/chatInnerAddToChatInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/chat_inner_fragment_add_to_chat"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/chatInnerAddChatMemberButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chatInnerAddConectionInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/chat_inner_fragment_add_stranger"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/chatInnerAddConnectionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatInnerAddToChatInputEditText" />

</android.support.constraint.ConstraintLayout>