<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeInformationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeInformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/homeWeatherView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_info_weather_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toStartOf="@+id/moreWeatherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeInfoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_info_location_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeWeatherView" />

    <TextView
        android:id="@+id/homeInfoUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="New Invites"
        app:layout_constraintBottom_toTopOf="@+id/homeInfoUserNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeInfoLocation" />

    <TextView
        android:id="@+id/homeInfoUserNickname"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="140dp"
        android:layout_marginTop="50dp"
        android:text="Active Chats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeInfoUserName" />

    <Button
        android:id="@+id/moreWeatherButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onClick"
        android:text="@string/home_info_more_weather_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeWeatherView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/antiLawsuitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/weather_site"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreWeatherButton" />

</android.support.constraint.ConstraintLayout>